Sys properties are part of the restored state...